--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: java
+sudo: true
+dist: trusty
 jdk: oraclejdk8
-script: HEROKU_API_KEY="$HEROKU_API_KEY" mvn clean verify -P heroku
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+before_install:
+  - chmod +x mvnw
+  script: HEROKU_API_KEY="$HEROKU_API_KEY" mvn clean verify -P heroku
